# PyPortfolioOpt

./: .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.test.yml  docker-compose.yml  examples.py  pdr.py  pip-selfcheck.json  pipfile  pyproject.toml  pyvenv.cfg  readthedocs.yml  requirements.txt  scratch.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  help-needed.md  installation-error.md
.github/workflows/: ci.yml  codecov.yml  codeql.yml  coverage.yml  deptry.yml  main.yml  pre-commit.yml
binder/: Dockerfile  jupyter_notebook_config.py
cookbook/: 1-RiskReturnModels.ipynb  2-Efficient-Frontier.ipynb  2-Mean-Variance-Optimisation.ipynb  3-Advanced-Mean-Variance-Optimisation.ipynb  4-Black-Litterman-Allocation.ipynb  5-Hierarchical-Risk-Parity.ipynb  HierarchicalRiskParity.ipynb
cookbook/data/: Tickers.py  spy_prices.csv  stock_prices.csv
docker/: Dockerfile  Dockerfile.dockerignore
docs/: About.rst  BlackLitterman.rst  Citing.rst  Contributing.rst  Efficient Frontier.rst  EfficientFrontier.rst  Expected Returns.rst  ExpectedReturns.rst  FAQ.rst  GeneralEfficientFrontier.rst  Makefile  MeanVariance.rst  OtherOptimisers.rst  OtherOptimizers.rst  Plotting.rst  Postprocessing.rst  Risk Models.rst  RiskModels.rst  Roadmap.rst  User Guide.rst  UserGuide.rst  conf.py  index.rst
docs/_build/doctrees/: PyPortfolioOpt.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  PyPortfolioOpt.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: PyPortfolioOpt.rst.txt
docs/_build/html/_static/: documentation_options.js
example/: examples.py
media/: logo_v0.pages
pypfopt/: __init__.py  base_optimizer.py  black_litterman.py  cla.py  cvar.py  discrete_allocation.py  discretise_weights.py  efficient_frontier.py  efficient_semivariance.py  exceptions.py  expected_returns.py  hierarchical_portfolio.py  hierarchical_portfolios.py  hierarchical_risk_parity.py  objective_functions.py  plotting.py  risk_models.py  value_at_risk.py
pypfopt/efficient_frontier/: __init__.py  efficient_cdar.py  efficient_cvar.py  efficient_frontier.py  efficient_semivariance.py
tests/: stock_returns.csv  test_base_optimizer.py  test_black_litterman.py  test_cla.py  test_custom_objectives.py  test_cvar.py  test_discrete_allocation.py  test_efficient_cdar.py  test_efficient_cvar.py  test_efficient_frontier.py  test_efficient_semivariance.py  test_expected_returns.py  test_hrp.py  test_imports.py  test_objective_functions.py  test_plotting.py  test_risk_models.py  test_value_at_risk.py  utilities_for_tests.py
tests/resources/: cov_matrix.csv  spy_prices.csv  stock_prices.csv  weights_hrp.csv
