[tool.poetry]
name = "pyportfolioopt"
version = "1.5.5"
description = "Financial portfolio optimization in python"
license = "MIT"
authors = ["Robert Andrew Martin <martin.robertandrew@gmail.com>"]
readme = "README.md"
repository = "https://github.com/robertmartin8/PyPortfolioOpt"
documentation = "https://pyportfolioopt.readthedocs.io/en/latest/"
keywords= ["finance", "portfolio", "optimization", "quant", "investing"]
classifiers=[
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Financial and Insurance Industry",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Office/Business :: Financial",
        "Topic :: Office/Business :: Financial :: Investment",
    ]
packages = [ {include = "pypfopt"} ]

[tool.poetry.urls]
"Issues" = "https://github.com/robertmartin8/PyPortfolioOpt/issues"
"Personal website" = "https://reasonabledeviations.com"

[tool.poetry.dependencies]
python = ">=3.8,<3.15"
scipy = "^1.3"
pandas = ">=0.19"
cvxpy = "^1.1.19"
numpy = "^1.22.4"
matplotlib = { version="^3.2.0", optional=true }
scikit-learn = { version="^0.24.1", optional=true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
jupyterlab = "^3.4.2"
black = "^22.3.0"
ipykernel = "^6.13.0"
jedi = "^0.18.1"
pytest-cov = "^3.0.0"
yfinance = "^0.1.70"

[tool.poetry.extras]
optionals = ["scikit-learn", "matplotlib", "cvxopt"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"
