[project]
name = "pyportfolioopt"
version = "0.0.0"
description = "Financial portfolio optimization in python"
license = "MIT"
authors = [{name="Robert Andrew Martin", email="martin.robertandrew@gmail.com"}]
readme = "README.md"
repository = "https://github.com/robertmartin8/PyPortfolioOpt"
documentation = "https://pyportfolioopt.readthedocs.io/en/latest/"
keywords= ["finance", "portfolio", "optimization", "quant", "investing"]
requires-python = ">=3.10"
classifiers=[
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Financial and Insurance Industry",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Office/Business :: Financial",
        "Topic :: Office/Business :: Financial :: Investment",
    ]
dependencies = [
        "scipy",
        "pandas",
        "cvxpy",
        "numpy"
]

#[tool.poetry.urls]
#"Issues" = "https://github.com/robertmartin8/PyPortfolioOpt/issues"
#"Personal website" = "https://reasonabledeviations.com"

[project.optional-dependencies]
plot = [
        "matplotlib",
        "plotly",
        "scikit-learn",
        "ecos"
]

[dependency-groups]
dev = [
        "pytest-cov>=6.0.0",
        "pytest>=8.3.3",
        "pre-commit>=4.0.1",
        "jedi",
        "yfinance",
        "ecos"
]

#excel = [
#  "odfpy>=1.4.1",
#  "openpyxl>=3.1.0",
#  "python-calamine>=0.1.7",
#  "pyxlsb>=1.0.10",
#  "xlrd>=2.0.1",
#  "xlsxwriter>=3.0.5"
#]

#[tool.poetry.dependencies]
#python = ">=3.9"
#scipy = ">=1.3"
#pandas = ">=0.19"
#cvxpy = ">=1.1.19"
#numpy = ">=1.26.0"
#matplotlib = { version=">=3.2.0", optional=true }
#scikit-learn = { version=">=0.24.1", optional=true }
#ecos = { version="^2.0.14", optional=true }
#plotly = { version="^5.0.0", optional=true }

#[tool.poetry.dev-dependencies]
#pytest = ">=7.1.2"
#flake8 = ">=4.0.1"
#jupyterlab = ">=3.4.2"
#black = ">=22.3.0"
#ipykernel = ">=6.13.0"
#jedi = ">=0.18.1"
#pytest-cov = ">=3.0.0"
#yfinance = ">=0.1.70"

#[tool.poetry.extras]
#optionals = ["scikit-learn", "matplotlib", "cvxopt"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py", "tests/test_imports.py"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pypfopt"]

#[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"


#[tool.black]
#line-length = 88

#[tool.isort]
#profile = "black"
